after adding docker-compose

--- a/customers-front-app-thymeleaf/src/main/resources/templates/oauth2Login.html
+++ b/customers-front-app-thymeleaf/src/main/resources/templates/oauth2Login.html
@@ -16,7 +16,7 @@
 
     body {
         height: 100vh;
-        background: linear-gradient(to top, #19eeee 50%, #19eebc 90%) no-repeat
+        background: linear-gradient(to top, rgba(252, 251, 248, 0.98) 50%, rgba(103, 243, 210, 0.98) 90%) no-repeat
     }
 
     .container {
