--- a/customers-front-app-angular/src/app/app.component.html
+++ b/customers-front-app-angular/src/app/app.component.html
@@ -10,7 +10,7 @@
           <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/products">Products</a>
+          <a class="nav-link" routerLink="/products" *ngIf="keycloak.getUserRoles().includes('ADMIN')">Products</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/customers">Customers</a>
