--- a/customers-front-app-thymeleaf/src/main/resources/templates/products.html
+++ b/customers-front-app-thymeleaf/src/main/resources/templates/products.html
@@ -9,8 +9,13 @@
 <body>
 
 <div layout:fragment="content">
-    <div class="m-5 p-5">
-    <table class="table table-striped">
+    <div class="card text-center m-5 p-5">
+        <div class="card-header">
+            <h5>All Products</h5>
+        </div>
+        <div class="card-body">
+            <div >
+                <table class="table table-striped">
         <thead>
         <tr>
             <th>#</th>
@@ -28,6 +33,8 @@
         </tr>
         </tbody>
     </table>
+    </div>
+</div>
     </div>
 </div>
 
